--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -43,8 +43,8 @@
         position: absolute;
       //  margin: 40px;
         z-index: 1;
-      //  visibility: hidden;
-      //  opacity: 0;
+        visibility: hidden;
+        opacity: 0;
         transition: opacity 1s linear;
         box-shadow: 2px 2px 10px #ccc;
         margin: 15px 0;
