--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -26,6 +26,8 @@
   /* (for debuggings)*/
   position: absolute;
   z-index: 1;
+  visibility: hidden;
+  opacity: 0;
   transition: opacity 1s linear;
   box-shadow: 2px 2px 10px #ccc;
   margin: 15px 0; }
