--- a/res/css/shortpixel-toolbar.css
+++ b/res/css/shortpixel-toolbar.css
@@ -25,6 +25,23 @@ CSS for features that are displayed on all Admin page, like the bar status icon 
       top: 0; }
     #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div span.shp-alert {
       display: none; }
+    #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div .stats {
+      left: -1px;
+      top: 3px;
+      right: 0;
+      position: absolute;
+      z-index: 10;
+      height: 25px;
+      width: 25px;
+      margin: 0 auto;
+      box-sizing: border-box;
+      border-radius: 50%;
+      padding: 5px 0 0 7px;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 14px;
+      background: rgba(0, 0, 0, 0.6);
+      color: #fff; }
     #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div .controls {
       position: absolute;
       top: 0;
@@ -98,6 +115,9 @@ CSS for features that are displayed on all Admin page, like the bar status icon 
     visibility: visible;
     opacity: 1;
     z-index: 100; }
+  #wpadminbar li.shortpixel-toolbar-processing.shortpixel-paused .ab-item > div .stats {
+    opacity: 0;
+    z-index: 0; }
   #wpadminbar li.shortpixel-toolbar-processing.shortpixel-alert span.shp-alert {
     display: inline;
     font-size: 26px;
