--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -40,11 +40,11 @@
         width: 90%;
         min-height: 600px;
       /* (for debuggings)*/
-        position: absolute;
+    //    position: absolute;
       //  margin: 40px;
         z-index: 1;
-        visibility: hidden;
-        opacity: 0;
+      //  visibility: hidden;
+        opacity: 1;
         transition: opacity 1s linear;
         box-shadow: 2px 2px 10px #ccc;
         margin: 15px 0;
