--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -32,18 +32,24 @@
        margin-left: 10px;
        margin: 15px 0;
     }
+
+    nav {
+      margin: 45px auto;
+      width: 80%;
+    }
      .panel
      {
         background: #fff;
     //    border: 1px solid #ff0000;
       //  max-width: 950px;
         width: 90%;
-        min-height: 600px;
+        min-height: 90vh;
+        //height: 100vh;
       /* (for debuggings)*/
-    //    position: absolute;
+        position: absolute;
       //  margin: 40px;
         z-index: 1;
-      //  visibility: hidden;
+       visibility: hidden;
         opacity: 1;
         transition: opacity 1s linear;
         box-shadow: 2px 2px 10px #ccc;
@@ -88,6 +94,36 @@
        h3.heading { border:0 ;
         }
 
+        &[data-status="loading"]
+        {
+           .load.wrapper {
+             opacity: 1;
+           }
+        }
+        &[data-status="loaded"]
+        {
+          .interface.wrapper
+          {
+             opacity: 1;
+          }
+        }
+
+        .load.wrapper, .interface.wrapper
+        {
+           opacity: 0;
+           transition: all 1s ease-in;
+
+        }
+
+        .load.wrapper .loading {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 70%;
+            img { width: 60%;
+             }
+        }
+
        .bulk-wrapper
        {
             background-color: #116C7D;
@@ -113,6 +149,7 @@
                }
             }
        }
+
     }
 
     section.progressbar
@@ -202,7 +239,6 @@
          opacity: 0;
          transition: all 1s ease-in;
 
-
       }
       &[data-status="loading"]
       {
@@ -271,9 +307,19 @@
             display: inline-block;
          }
          .option {
-           margin-left: 45px;
-          }
+           margin-left: 65px;
+           font-size: 16px;
+           line-height: 26px;
+           label {
+               width: 200px;
+               display: inline-block;
+           }
+           .number {
+               font-weight: 700;
+           }
+        }
       }
+
     } // panel
 
     section.panel.summary
@@ -422,7 +468,7 @@
       }
     } // panel
 
-    section.panel.process
+    section.panel.process, section.panel.finished
     {
       .progressbar .select, .progressbar .summary
       {
@@ -602,6 +648,40 @@
           margin: 35px auto;
       }
 
+    } // section process
+
+    section.panel.finished
+    {
+      .progressbar .select, .progressbar .summary, .progressbar .process
+      {
+         .line { background: #1FBEC9; }
+         .text, .step { color: #ccc }
+         .step { border-color: #1FBEC9; }
+      }
+      .progressbar .result
+      {
+         .line { @include line-active(); }
+         .text, .step { color: #EC2C25; }
+         .step { border-color: #1FBEC9; }
+      }
+
+      nav {
+          text-align: center;
+
+        button.finish
+        {
+            padding: 12px 60px;
+            border-radius: 3px;
+            background: #1FBEC9;
+            font-size: 16px;
+            color: #fff;
+            transition: all 0.5s ease;
+            &:hover {
+              background: lighten(#1FBEC9, 5%);
+
+            }
+        }
+      }
     }
 
     .part-debug
