--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -30,6 +30,8 @@
       font-style: normal;
     }
 
+
+
     p.description
     {
        font-size: 14px;
@@ -43,6 +45,9 @@
       width: 80%;
     }
 
+    .hidden {
+      display: none !important;
+    }
 
 
     .screen-wrapper
