--- a/res/css/short-pixel-modal.css
+++ b/res/css/short-pixel-modal.css
@@ -1,14 +1,14 @@
 div.sp-modal-shade {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 10; /* Sit on top */
+    z-index: 10000; /* Sit on top - blame WP-admin for the z-index battle . */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background: rgb(0,0,0); /* Fallback color */
+    background: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 div.shortpixel-modal {
     background-color: #fefefe;
@@ -17,7 +17,7 @@ div.shortpixel-modal {
     border: 1px solid #888;
     width: 30%; /* Could be more or less, depending on screen size */
     min-width: 300px; /* Could be more or less, depending on screen size */
-    z-index: 100; /* Proper z-index */
+    z-index: 100001; /* Proper z-index */
     position: fixed;
     top: 10%;
     left: 50%;
