Lot's 'o' fixes for the bulk processing

--- a/res/css/shortpixel-notices.css
+++ b/res/css/shortpixel-notices.css
@@ -2,55 +2,77 @@
   min-height: 75px;
   padding: 8px;
   display: flex;
-  align-items: center; }
-  .shortpixel.notice .notice-dismiss {
-    margin-top: 10px; }
-  .shortpixel.notice span {
-    vertical-align: middle; }
-    .shortpixel.notice span.icon {
-      margin: 0 25px 0 0; }
-  .shortpixel.notice .details-wrapper {
-    margin: 8px 0 4px 0; }
-    .shortpixel.notice .details-wrapper .detail-content-wrapper {
-      max-height: 0;
-      overflow: hidden; }
-      .shortpixel.notice .details-wrapper .detail-content-wrapper .detail-content {
-        opacity: 0;
-        transition: opacity 750ms linear; }
-    .shortpixel.notice .details-wrapper label {
-      opacity: 100;
-      transition: opacity 250ms ease-in; }
-      .shortpixel.notice .details-wrapper label span {
-        cursor: pointer;
-        font-size: 14px;
-        color: #0085ba;
-        font-weight: 500; }
-    .shortpixel.notice .details-wrapper input[name="detailhider"] {
-      display: none; }
-    .shortpixel.notice .details-wrapper input[name="detailhider"]:checked ~ .detail-content-wrapper {
-      max-height: none; }
-    .shortpixel.notice .details-wrapper input[name="detailhider"]:checked ~ .detail-content-wrapper .detail-content {
-      opacity: 100; }
-    .shortpixel.notice .details-wrapper input[name="detailhider"]:checked ~ .show-details {
-      opacity: 0;
-      transition: opacity 50ms ease-out; }
-    .shortpixel.notice .details-wrapper input[name='detailhider']:not(:checked) ~ .hide-details {
-      opacity: 0;
-      transition: opacity 50ms ease-out; }
+  align-items: center;
+}
+.shortpixel.notice .notice-dismiss {
+  margin-top: 10px;
+}
+.shortpixel.notice span {
+  vertical-align: middle;
+}
+.shortpixel.notice span.icon {
+  margin: 0 25px 0 0;
+}
+.shortpixel.notice .details-wrapper {
+  margin: 8px 0 4px 0;
+}
+.shortpixel.notice .details-wrapper .detail-content-wrapper {
+  max-height: 0;
+  overflow: hidden;
+}
+.shortpixel.notice .details-wrapper .detail-content-wrapper .detail-content {
+  opacity: 0;
+  transition: opacity 750ms linear;
+}
+.shortpixel.notice .details-wrapper label {
+  opacity: 100;
+  transition: opacity 250ms ease-in;
+}
+.shortpixel.notice .details-wrapper label span {
+  cursor: pointer;
+  font-size: 14px;
+  color: #0085ba;
+  font-weight: 500;
+}
+.shortpixel.notice .details-wrapper input[name=detailhider] {
+  display: none;
+}
+.shortpixel.notice .details-wrapper input[name=detailhider]:checked ~ .detail-content-wrapper {
+  max-height: none;
+}
+.shortpixel.notice .details-wrapper input[name=detailhider]:checked ~ .detail-content-wrapper .detail-content {
+  opacity: 100;
+}
+.shortpixel.notice .details-wrapper input[name=detailhider]:checked ~ .show-details {
+  opacity: 0;
+  transition: opacity 50ms ease-out;
+}
+.shortpixel.notice .details-wrapper input[name=detailhider]:not(:checked) ~ .hide-details {
+  opacity: 0;
+  transition: opacity 50ms ease-out;
+}
 
 .shortpixel.notice .sp-conflict-plugins {
   display: table;
   border-spacing: 10px;
-  border-collapse: separate; }
-  .shortpixel.notice .sp-conflict-plugins li {
-    display: table-row; }
-  .shortpixel.notice .sp-conflict-plugins li > * {
-    display: table-cell; }
+  border-collapse: separate;
+}
+.shortpixel.notice .sp-conflict-plugins li {
+  display: table-row;
+}
+.shortpixel.notice .sp-conflict-plugins li > * {
+  display: table-cell;
+}
 .shortpixel.notice .content button {
-  background-color: #007cba; }
+  background-color: #007cba;
+}
 .shortpixel.notice li.sp-conflict-plugins-list {
   line-height: 28px;
   list-style: disc;
-  margin-left: 80px; }
+  margin-left: 80px;
+}
 .shortpixel.notice li.sp-conflict-plugins-list a.button {
-  margin-left: 10px; }
+  margin-left: 10px;
+}
+
+/*# sourceMappingURL=shortpixel-notices.css.map */
