--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -1,6 +1,3 @@
-
-
-
 .shortpixel-bulk-wrapper
 {
   /** GENERAL STYLES **/
@@ -100,21 +97,13 @@
     }
      .panel
      {
-    //    background: #fff;
-    //    border: 1px solid #ff0000;
-      //  max-width: 950px;
         width: 100%;
-      //  min-height: 90vh;
-        //height: 100vh;
-      /* (for debuggings)*/
         position: absolute;
         display: none;
-      //  margin: 40px;
         z-index: 0;
         visibility: hidden;
         opacity: 0;
         transition: opacity 1s linear;
-        //box-shadow: 2px 2px 10px #ccc;
         margin: 15px 0;
         p {
           margin-left: 15px;
@@ -136,6 +125,27 @@
           display: inline-block;
           width: 100%;
         }
+
+        .error { color: #ff0000; }
+        .errorbox {
+          display: block;
+          transition: 1s all;
+          position: absolute;
+          opacity: 0;
+          right: 10px;
+          top: 4px;
+          padding: 8px;
+          height: 100%;
+          border: 1px solid #000;
+          z-index: -1;
+          background: rgba(255,255,255,0.9);
+        }
+        .showerrorbox:hover ~ .errorbox, .errorbox:hover {
+            //display: inline;
+            opacity: 1;
+            z-index: 10;
+
+        }
      }
 
      .processor-paused
@@ -153,6 +163,23 @@
        text-align: center;
        z-index: 10;
        border-radius: 10px;
+       cursor: pointer;
+       transition: all 900ms;
+       &:hover {
+         background: darken(rgba(31, 190,201, 1), 5%);
+       }
+       .dashicons
+       {
+         margin-right: 6px;
+         &::before
+         {
+            width: 26px;
+            height: 26px;
+            font-size: 26px;
+          //
+         }
+         &:hover::before{ content: '\F522'}
+       }
      }
 
 /**** DASHBOARD ***/
@@ -188,7 +215,29 @@
             }
        }
 
-    }
+       .dashboard-log
+       {
+          display: table;
+          width: 50%;
+          margin: 0 auto;
+          h3 { display: table-caption; }
+          > div {
+            display: table-row;
+            > span { display: table-cell; padding: 8px 8px 8px 0; }
+          }
+          .head
+          {
+            span {
+
+              font-weight: 700;
+            }
+          }
+          .data span {
+              font-size: 15px;
+          }
+       }
+
+    } // Section
 
     section.progressbar
     {
@@ -503,7 +552,6 @@
           border: 1px solid #1FBEC9;
           border-radius: 3px;
           box-shadow: 0px 1px 1px rgba(171, 170, 170, 0.3);
-
         }
       }
     } // panel
@@ -619,7 +667,7 @@
            justify-content: space-between;
            align-items: center;
            margin: 15px auto;
-           max-width: 300px;
+        //   max-width: 300px;
 
 
            .opt-circle-image {
@@ -656,12 +704,15 @@
            {
               width: 350px;
               height: 350px;
-              border: 1px solid #DFEAFF;
+            //  border: 1px solid #DFEAFF;
               overflow: hidden;
               position: relative;
+
               img {
                 max-width: 100%;
                 max-height: 100%;
+                width: 100%;
+              //  transition: opacity 1s eas
               }
               p {
                 position: absolute;
